@@ -1,0 +1,5 @@
+systemd_unit_conf = configuration_data()
+systemd_unit_conf.set('prefix', get_option('prefix'))
+
+subdir('system')
+subdir('user')
