@@ -1,5 +1,6 @@
 mpdscribble 0.23 - not yet released
   * notify systemd about start-up completion
+  * add a systemd service file
   * remove libsoup support
   * require MPD 0.16
   * require libmpdclient 2.5
